--- a/witchermp3.css
+++ b/witchermp3.css
@@ -1,30 +1,30 @@
-#player,#player a{ color:#000000;  font-size: 11px; font-family: verdana;}
-#player{ background:url(http://static.tumblr.com/su8juwr/I64mkjm26/branco.png); background-position:bottom; background-color: #FFFFFF;}
-#player .mainImage{ background:url(witcherpausemp3.png); }
+#player,#player a { color:#000000;  font-size: 11px; font-family: verdana;}
+#player { background:url(http://static.tumblr.com/su8juwr/I64mkjm26/branco.png); background-position:bottom; background-color: #FFFFFF;}
+#player .mainImage { background:url(witcherpausemp3.png); }
 
-#player #baseLeft{ width:93px; } 
-#player #baseRight{ width:145px;} 
-#player .button{  width:26px; }
-#player #play{ background:url(witcherplaymp3.png); }
-#player #play,#player #pause{ left:26px; }
-#player #previous{ left:0px; }     
-#player #next{ left:52px; }
-#player #title{ left:90px;  font-size: 9px; } 
-#player #tooltip{ right:196px; } 
-#player #timer{ right:120px;  } 
-#player #list{ right:0px; } 
+#player #baseLeft { width:93px; } 
+#player #baseRight { width:145px;} 
+#player .button { width:26px; }
+#player #play { background:url(witcherplaybutton.png); }
+#player #play,#player #pause { left:26px; }
+#player #previous { left:0px; }     
+#player #next { left:52px; }
+#player #title { left:90px;  font-size: 9px; } 
+#player #tooltip { right:196px; } 
+#player #timer { right:120px;  } 
+#player #list { right:0px; } 
 
-#player #seeker{ right:320px; }
-#player #seekerBase{ border-color:#FFFFFF;  }  
-#player #seekerBuffered{ background-color:#000000; } 
-#player #seekerSliderBase{ background-color:#000; }
+#player #seeker { right:320px; }
+#player #seekerBase { border-color:#FFFFFF;  }  
+#player #seekerBuffered { background-color:#000000; } 
+#player #seekerSliderBase { background-color:#000; }
 
-#player #volume{ width:65px; right:39px; } 
-#player #volumeSlider{ width:8px; background:url(http://static.tumblr.com/su8juwr/I64mkjm26/branco.png); }
+#player #volume { width:65px; right:39px; } 
+#player #volumeSlider { width:8px; background:url(http://static.tumblr.com/su8juwr/I64mkjm26/branco.png); }
 
-#playlist,#playlist .module,#playlist h3{ border-color:#FFFFFF;}
-#playlist .module{  color:#000000; background-color:#FFFFFF; }
-#playlist h3{ background:url(); color:#000000; background-color:#FFFFFF;  }
-#playlist .even{background-color:#fff;}
-#playlist .odd{ background-color:#fff;}
-#playlist .focus{ background-color:#BEBEBE; color:#000;}
+#playlist,#playlist .module,#playlist h3 { border-color:#FFFFFF;}
+#playlist .module {  color:#000000; background-color:#FFFFFF; }
+#playlist h3 { background:url(); color:#000000; background-color:#FFFFFF;  }
+#playlist .even {background-color:#fff;}
+#playlist .odd { background-color:#fff;}
+#playlist .focus { background-color:#BEBEBE; color:#000;}    
